# evokit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README_PYPI.md  build-sdist.bat  build-wheel.bat  pyproject.toml  setup.py
docs/: .gitignore  update.bat
docs/source/: conf.py  evokit.accounting.rst  evokit.core.accelerator.rst  evokit.core.rst  evokit.diversity.rst  evokit.evolvables.lgp.rst  evokit.evolvables.otypes.rst  evokit.evolvables.primitives.rst  evokit.evolvables.rst  evokit.rst  evokit.tools.diversity.rst  evokit.tools.lineage.rst  evokit.tools.rst  evokit.watch.rst  evokit.watching.rst  index.rst  install-and-build.rst  install-and-built.rst  why.rst
evoframe/evolvables/: gp.py
evokit/: py.typed
evokit/.aside/: lgp.py
evokit/_utils/: addons.py  dependency.py  inspect.py
evokit/accounting/: __init__.py  accountant.py  accountants.py  visualisers.py
evokit/core/: __init__.py  accountant.py  algorithm.py  controller.py  evaluator.py  population.py  selector.py  variator.py
evokit/diversity/: __init__.py
evokit/evolvables/: __init__.py  _common.py  algorithms.py  binstring.py  bitstring.py  funcs.py  gp.py  gp_visualiser.py  lgp.ipynb  lgp.py  prefabs.py  scaffold.py  selectors.py
evokit/source/: modules.rst
evokit/tools/: lineage.py
evokit/watch/: __init__.py  memory.py  visual.py  visualisers.py  watcher.py  watchers.py
evokit/watching/: __init__.py  visualisers.py  watcher.py
examples/: e1.ipynb
src/: glossary.md
src/core/: __init__.py  accountant.py  controller.py  (+5 more)
test/: check_guides.bat
(+42 files in other folders)
