[project]

name = "evokit"
version = "0.2"
description = "The EvoKit framework, experiment build 1"
dependencies = ["numpy>=1.26"]
requires-python = ">= 3.12.0"

authors = [
    {name = "Yiding Li", email = "redacted@example.ca"},
]

readme = "README.md"

license = {file = "LICENSE.txt"}

keywords = ["Machine Learning", "Evolutionary Computing", "Framework"]

# Overtagging
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3.12",

    "Natural Language :: English",

    "Topic :: Documentation :: Sphinx",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

# Add tags:
#   Intended Audieniece

[project.optional-dependencies]
# To visualise representations
gp_visualise = ["graphviz>=0.20.3"]
# To execute test cases.
test = ["pytest>=8.2.0", "nbmake>=1.5.4"]
# To visualise accounting records
accounting_visualise = ["numpy>=1.26.4", "matplotlib>=3.10.1"]


[build-system]

requires = ["setuptools >= 60.1.1"]
build-backend = "setuptools.build_meta"



# [tools.setuptools.packages.find]
# where = ["src"]